@@ -25,9 +25,10 @@ import java.time.temporal.ChronoUnit;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.LinkedList;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.ConcurrentLinkedDeque;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.concurrent.atomic.AtomicReference;
 
 import org.aopalliance.intercept.MethodInterceptor;
 import org.aopalliance.intercept.MethodInvocation;
@@ -72,34 +73,34 @@ public class DefaultServiceStatistik implements ServiceStatistik, MethodIntercep
     /**
      * Duration of the last search calls (in milliseconds).
      */
-    private final List<Duration> letzteSuchdauern = new LinkedList<>();
+    private final ConcurrentLinkedDeque<Duration> letzteSuchdauern = new ConcurrentLinkedDeque<>();
 
     /**
      * Flag for the minute in which values of the last minute were determined.
      */
-    private volatile LocalDateTime letzteMinute = DateTimeUtil.localDateTimeNow();
+    private final AtomicReference<LocalDateTime> letzteMinute = new AtomicReference<>(DateTimeUtil.localDateTimeNow());
 
     /**
      * Number of non-error calls made in the minute called 'last minute'.
      */
-    private volatile int anzahlAufrufeLetzteMinute;
+    private final AtomicInteger anzahlAufrufeLetzteMinute = new AtomicInteger();
 
     /**
      * Number of non-error calls made in the current minute.
      */
-    private volatile int anzahlAufrufeAktuelleMinute;
+    private final AtomicInteger anzahlAufrufeAktuelleMinute = new AtomicInteger();
 
     /**
      * Number of calls made in the minute denoted by lastMinute, during which
      * a technical error occurred.
      */
-    private volatile int anzahlFehlerLetzteMinute;
+    private final AtomicInteger anzahlFehlerLetzteMinute = new AtomicInteger();
 
     /**
      * Number of calls made in the current minute in which a techinical error
      * occurred.
      */
-    private volatile int anzahlFehlerAktuelleMinute;
+    private final AtomicInteger anzahlFehlerAktuelleMinute = new AtomicInteger();
 
     /**
      * The number of business errors in the last minute.
@@ -107,7 +108,7 @@ public class DefaultServiceStatistik implements ServiceStatistik, MethodIntercep
      * A business error occurs if either a {@link PlisBusinessToException} was thrown or the response contains an
      * entry marked with {@link FachlicherFehler}.
      */
-    private volatile int anzahlFachlicheFehlerLetzteMinute;
+    private final AtomicInteger anzahlFachlicheFehlerLetzteMinute = new AtomicInteger();
 
     /**
      * The number of business errors in the current minute.
@@ -115,7 +116,7 @@ public class DefaultServiceStatistik implements ServiceStatistik, MethodIntercep
      * A business error occurs if either a {@link PlisBusinessToException} was thrown or the response contains an
      * entry marked with {@link FachlicherFehler}.
      */
-    private volatile int anzahlFachlicheFehlerAktuelleMinute;
+    private final AtomicInteger anzahlFachlicheFehlerAktuelleMinute = new AtomicInteger();
 
     /**
      * Micrometer tags.
@@ -163,23 +164,26 @@ public class DefaultServiceStatistik implements ServiceStatistik, MethodIntercep
      * @param erfolgreich         flag, if the call was successful ({@code true}) or a technical error occurred ({@code false}).
      * @param fachlichErfolgreich Flag, if the call was successful ({@code true}) or a business error occurred ({@code false}).
      */
-    public synchronized void zaehleAufruf(Duration dauer, boolean erfolgreich, boolean fachlichErfolgreich) {
-        aktualisiereZeitfenster();
-        anzahlAufrufeAktuelleMinute++;
+    public void zaehleAufruf(Duration dauer, boolean erfolgreich, boolean fachlichErfolgreich) {
+        synchronized (anzahlAufrufeAktuelleMinute) {
+            aktualisiereZeitfenster();
+            anzahlAufrufeAktuelleMinute.incrementAndGet();
 
-        if (!erfolgreich) {
-            anzahlFehlerAktuelleMinute++;
+            if (!erfolgreich) {
+                anzahlFehlerAktuelleMinute.incrementAndGet();
+            }
+
+            if (!fachlichErfolgreich) {
+                anzahlFachlicheFehlerAktuelleMinute.incrementAndGet();
+            }
         }
+        synchronized (letzteSuchdauern) {
+            if (letzteSuchdauern.size() == ANZAHL_AUFRUFE_FUER_DURCHSCHNITT) {
+                letzteSuchdauern.removeLast();
+            }
 
-        if (!fachlichErfolgreich) {
-            anzahlFachlicheFehlerAktuelleMinute++;
+            letzteSuchdauern.addFirst(dauer);
         }
-
-        if (letzteSuchdauern.size() == ANZAHL_AUFRUFE_FUER_DURCHSCHNITT) {
-            letzteSuchdauern.remove(ANZAHL_AUFRUFE_FUER_DURCHSCHNITT - 1);
-        }
-
-        letzteSuchdauern.add(0, dauer);
     }
 
     /**
@@ -187,24 +191,27 @@ public class DefaultServiceStatistik implements ServiceStatistik, MethodIntercep
      * and last minute. If a minute has elapsed, the values of the current * minute are copied to those of the counters for the last minute.
      * The counters for the current minute are set to 0. The method ensures that this operation can be performed only once per minute.
      */
-    private synchronized void aktualisiereZeitfenster() {
-        LocalDateTime aktuelleMinute = getAktuelleMinute();
-        if (!aktuelleMinute.isEqual(letzteMinute)) {
-            if (ChronoUnit.MINUTES.between(letzteMinute, aktuelleMinute) > 1) {
-                // no last minute infos
-                anzahlAufrufeLetzteMinute = 0;
-                anzahlFehlerLetzteMinute = 0;
-                anzahlFachlicheFehlerLetzteMinute = 0;
-            } else {
-                anzahlAufrufeLetzteMinute = anzahlAufrufeAktuelleMinute;
-                anzahlFehlerLetzteMinute = anzahlFehlerAktuelleMinute;
-                anzahlFachlicheFehlerLetzteMinute = anzahlFachlicheFehlerAktuelleMinute;
-            }
+    private void aktualisiereZeitfenster() {
+        synchronized (letzteMinute) {
+            LocalDateTime aktuelleMinute = getAktuelleMinute();
+            LocalDateTime letzteMinute = this.letzteMinute.get();
+            if (!aktuelleMinute.isEqual(letzteMinute)) {
+                if (ChronoUnit.MINUTES.between(letzteMinute, aktuelleMinute) > 1) {
+                    // no last minute infos
+                    anzahlAufrufeLetzteMinute.set(0);
+                    anzahlFehlerLetzteMinute.set(0);
+                    anzahlFachlicheFehlerLetzteMinute.set(0);
+                } else {
+                    anzahlAufrufeLetzteMinute.set(anzahlAufrufeAktuelleMinute.get());
+                    anzahlFehlerLetzteMinute.set(anzahlAufrufeAktuelleMinute.get());
+                    anzahlFachlicheFehlerLetzteMinute.set(anzahlFachlicheFehlerAktuelleMinute.get());
+                }
 
-            anzahlAufrufeAktuelleMinute = 0;
-            anzahlFehlerAktuelleMinute = 0;
-            anzahlFachlicheFehlerAktuelleMinute = 0;
-            letzteMinute = aktuelleMinute;
+                anzahlAufrufeAktuelleMinute.set(0);
+                anzahlFehlerAktuelleMinute.set(0);
+                anzahlFachlicheFehlerAktuelleMinute.set(0);
+                this.letzteMinute.set(aktuelleMinute);
+            }
         }
     }
 
@@ -226,19 +233,19 @@ public class DefaultServiceStatistik implements ServiceStatistik, MethodIntercep
     @Override
     public int getAnzahlAufrufeLetzteMinute() {
         aktualisiereZeitfenster();
-        return anzahlAufrufeLetzteMinute;
+        return anzahlAufrufeLetzteMinute.get();
     }
 
     @Override
     public int getAnzahlFehlerLetzteMinute() {
         aktualisiereZeitfenster();
-        return anzahlFehlerLetzteMinute;
+        return anzahlFehlerLetzteMinute.get();
     }
 
     @Override
     public int getAnzahlFachlicheFehlerLetzteMinute() {
         aktualisiereZeitfenster();
-        return anzahlFachlicheFehlerLetzteMinute;
+        return anzahlFachlicheFehlerLetzteMinute.get();
     }
 
     @Override
@@ -301,7 +308,7 @@ public class DefaultServiceStatistik implements ServiceStatistik, MethodIntercep
 
         List<Field> objectFields = Arrays.stream(clazzToScan.getDeclaredFields())
                 .filter(field -> !ClassUtils.isPrimitiveOrWrapper(field.getType()) && !field.getType().isEnum())
-                .collect(Collectors.toList());
+                .toList();
 
         LOGISY.trace("{} Analysiere Objekt {} (Klasse {}) {} Felder gefunden.",
                 String.join("", Collections.nCopies(tiefe, "-")), result.toString(), clazzToScan.getSimpleName(),
